; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_ldebug.c_checkArgMode.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_ldebug.c_checkArgMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i32)* @checkArgMode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkArgMode(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %40 [
    i32 130, label %8
    i32 128, label %13
    i32 129, label %14
    i32 131, label %18
  ]

8:                                                ; preds = %3
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @check(i32 %11)
  br label %40

13:                                               ; preds = %3
  br label %40

14:                                               ; preds = %3
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @checkreg(%struct.TYPE_4__* %15, i32 %16)
  br label %40

18:                                               ; preds = %3
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @ISK(i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %18
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @INDEXK(i32 %23)
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = icmp slt i32 %24, %27
  %29 = zext i1 %28 to i32
  br label %37

30:                                               ; preds = %18
  %31 = load i32, i32* %5, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = icmp slt i32 %31, %34
  %36 = zext i1 %35 to i32
  br label %37

37:                                               ; preds = %30, %22
  %38 = phi i32 [ %29, %22 ], [ %36, %30 ]
  %39 = call i32 @check(i32 %38)
  br label %40

40:                                               ; preds = %3, %37, %14, %13, %8
  ret i32 1
}

declare dso_local i32 @check(i32) #1

declare dso_local i32 @checkreg(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @ISK(i32) #1

declare dso_local i32 @INDEXK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
